--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
                                 <li class="scroll"><a href="#service">Services</a></li>
                                 <li class="scroll"><a href="#voitures">Voitures</a></li>
                                 <li class="scroll"><a href="#deposer-offre">Déposer une offre</a></li>
-                                <li class="scroll"><a href="#brand">Brands</a></li>
+                                <!-- <li class="scroll"><a href="#brand">Brands</a></li> -->
                                 <li class="scroll"><a href="#contact">Contact</a></li>
 
                                 {# Boutons Connexion / Inscription / Déconnexion / Admin / Juriste #}
