--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -126,13 +126,6 @@
     </script>
 
 
-
-
-
-
-
-
-
 <!-- ==================== END WELCOME-HERO ==================== -->
 
     <!-- ==================== cars ==================== -->
@@ -442,7 +435,7 @@
     <section id="clients-say" class="clients-say">
         <div class="container">
             <div class="section-header">
-                <h2>what our clients say</h2>
+                <h2>Ce que disent nos clients</h2>
             </div>
             <div class="row">
                 <div class="owl-carousel testimonial-carousel">
@@ -451,22 +444,25 @@
                             <div class="testimonial-description">
                                 <div class="testimonial-info">
                                     <div class="testimonial-img">
-                                        <img src="{{ asset('assets/images/clients/c1.png') }}" alt="image of clients person" />
+                                        <img src="{{ asset('assets/images/clients/c1.png') }}" alt="Image d'un client" />
                                     </div>
                                 </div>
                                 <div class="testimonial-comment">
                                     <p>
-                                        Sed ut pers unde omnis iste natus error sit voluptatem accusantium dolor laudan rem aperiam.
+                                        "Un service exceptionnel ! Très satisfait de l'expérience, je recommande vivement."
                                     </p>
+                                    <div class="testimonial-stars">
+                                        ★★★★★
+                                    </div>
                                 </div>
                                 <div class="testimonial-person">
-                                    <h2><a href="#">tomas lili</a></h2>
-                                    <h4>new york</h4>
+                                    <h2><a href="#">Les pilotes connectés</a></h2>
+                                    <h4>Nancy</h4>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    {# Ajoute d'autres témoignages (c2.png, c3.png, etc.) #}
+                    {# Ajoutez d'autres témoignages (c2.png, c3.png, etc.) #}
                 </div>
             </div>
         </div>
