Ajout des conditions d'utilisation

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -116,44 +116,44 @@
                                     que ce soit pour un voyage, un déplacement professionnel ou une aventure en famille.
                                 </p>
                                 <div class="footer-contact">
-                                    <p><a href="mailto:contact@prekar-location.com" color=white>📧 Notre E-mail</a></p>
-                                    <p><a href="tel:+33745447855" color=white>📞 +33 7 45 44 78 55</a></p>
+                                    <p><a href="mailto:contact@prekar-location.com" color="white">📧 Notre E-mail</a></p>
+                                    <p><a href="tel:+33745447855" color="white">📞 +33 7 45 44 78 55</a></p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="single-footer-widget">
-                                <h2>about devloon</h2>
+                                <h2>À propos</h2>
                                 <ul>
-                                    <li><a href="#">about us</a></li>
-                                    <li><a href="#">career</a></li>
-                                    <li><a href="#">terms of service</a></li>
-                                    <li><a href="#">privacy policy</a></li>
+                                    <li><a href="#">À propos de nous</a></li>
+                                    <li><a href="#">Carrière</a></li>
+                                    <li><a href="#">Conditions de service</a></li>>
+                                    <li><a href="#">Politique de confidentialité</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-3 col-xs-12">
                             <div class="single-footer-widget">
-                                <h2>top brands</h2>
+                                <h2>Marques principales</h2> <
                                 <div class="row">
                                     <div class="col-md-7 col-xs-6">
                                         <ul>
                                             <li><a href="#">BMW</a></li>
-                                            <li><a href="#">lamborghini</a></li>
-                                            <li><a href="#">camaro</a></li>
-                                            <li><a href="#">audi</a></li>
-                                            <li><a href="#">infiniti</a></li>
-                                            <li><a href="#">nissan</a></li>
+                                            <li><a href="#">Lamborghini</a></li>
+                                            <li><a href="#">Camaro</a></li>
+                                            <li><a href="#">Audi</a></li>
+                                            <li><a href="#">Infiniti</a></li>
+                                            <li><a href="#">Nissan</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-md-5 col-xs-6">
                                         <ul>
-                                            <li><a href="#">ferrari</a></li>
-                                            <li><a href="#">porsche</a></li>
-                                            <li><a href="#">land rover</a></li>
-                                            <li><a href="#">aston martin</a></li>
-                                            <li><a href="#">mersedes</a></li>
-                                            <li><a href="#">opel</a></li>
+                                            <li><a href="#">Ferrari</a></li>
+                                            <li><a href="#">Porsche</a></li>
+                                            <li><a href="#">Land Rover</a></li>
+                                            <li><a href="#">Aston Martin</a></li>
+                                            <li><a href="#">Mercedes</a></li>
+                                            <li><a href="#">Opel</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -161,15 +161,15 @@
                         </div>
                         <div class="col-md-offset-1 col-md-3 col-sm-6">
                             <div class="single-footer-widget">
-                                <h2>news letter</h2>
+                                <h2>Lettre d'information</h2>
                                 <div class="footer-newsletter">
                                     <p>
-                                        Subscribe to get latest news update and informations
+                                        Abonnez-vous pour recevoir les dernières nouvelles et informations
                                     </p>
                                 </div>
                                 <div class="hm-foot-email">
                                     <div class="foot-email-box">
-                                        <input type="text" class="form-control" placeholder="Add Email">
+                                        <input type="text" class="form-control" placeholder="Ajouter un email">
                                     </div>
                                     <div class="foot-email-subscribe">
                                         <span><i class="fa fa-arrow-right"></i></span>
@@ -183,7 +183,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <p>
-                                &copy; 2025 developed by
+                                © 2025 développé par <!-- Traduit "developed by" -->
                                 <a href="https://www.lespilotesconnectes.com/">Les pilotes connectés</a>.
                             </p>
                         </div>
@@ -203,7 +203,7 @@
                 <div class="return-to-top">
                     <i class="fa fa-angle-up" id="scroll-top" data-toggle="tooltip"
                        data-placement="top" title=""
-                       data-original-title="Back to Top" aria-hidden="true"></i>
+                       data-original-title="Retour en haut" aria-hidden="true"></i> <!-- Traduit "Back to Top" -->
                 </div>
             </div>
         </footer>
